--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,12 +4,13 @@ version: 2.1
 
 orbs:
   python: circleci/python@2.1.1
+  # docker: circleci/docker@2.0.3
+  # heroku: circleci/heroku@1.2.6
 
 jobs:
   unit-tests-and-linter:
     docker:
       - image: cimg/python:3.11.5
-    parallelism: 4  # Adjust the number of parallel jobs as needed
     steps:
       - checkout
       - run:
@@ -23,41 +24,22 @@ jobs:
           name: Linter
           command: flake8
       - run:
-          name: Split Tests
-          command: circleci tests split --split-by=timings
-      - run:
           name: Run Tests
-          command: pytest --cov=. --cov-append --junit-xml=test-results/junit.xml
-
-  calculate-coverage:
-    docker:
-      - image: cimg/python:3.11.5
-    steps:
-      - checkout
+          command: pytest --cov=.
       - run:
-          name: Install Python deps in a venv
+          name: Check Test Coverage
           command: |
-            python3 -m venv env
-            . env/bin/activate
-      - python/install-packages:
-          pkg-manager: pip
-      - run:
-          name: Combine Coverage Data
-          command: |
-            pip install coverage
-            coverage combine
-            coverage report -m
-            coverage xml -o test-results/coverage.xml
             coverage=$(coverage report -m | grep TOTAL | awk '{print $4}')
             if [ "$coverage" \< 80 ]; then
-              echo "Argl ! Test coverage is below 80% ($coverage%)"
+              echo "Test coverage is below 80% ($coverage%)"
               exit 1
             fi
+
+      # - store_test_results:
+      #     path: test-results
+  
 
 workflows:
   build-and-deploy:
     jobs:
       - unit-tests-and-linter
-      - calculate-coverage:
-          requires:
-            - unit-tests-and-linter
