--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,26 +1,45 @@
 # Use the latest 2.1 version of CircleCI pipeline process engine.
-# See: https://circleci.com/docs/configuration-reference
+# See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
 
-# Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/configuration-reference/#jobs
+orbs:
+  python: circleci/python@2.1.1
+  # docker: circleci/docker@2.0.3
+  # heroku: circleci/heroku@1.2.6
+
 jobs:
-  say-hello:
-    # Specify the execution environment. You can specify an image from Docker Hub or use one of our convenience images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/configuration-reference/#executor-job
+  unit-tests-and-linter:
     docker:
-      - image: cimg/base:stable
-    # Add steps to the job
-    # See: https://circleci.com/docs/configuration-reference/#steps
+      - image: cimg/python:3.11.5
     steps:
       - checkout
       - run:
-          name: "Say hello"
-          command: "echo Hello, World!"
+          name: Install Python deps in a venv
+          command: |
+            python3 -m venv env
+            . env/bin/activate
+      - python/install-packages:
+          pkg-manager: pip
+      - run:
+          name: Linter
+          command: flake8
+      - run:
+          name: Run Tests
+          command: pytest --cov=.
+      - run:
+          name: Check Test Coverage
+          command: |
+            coverage=$(coverage report -m | grep TOTAL | awk '{print $4}')
+            if [ "$coverage" \< 80 ]; then
+              echo "Test coverage is below 80% ($coverage%)"
+              exit 1
+            fi
 
-# Orchestrate jobs using workflows
-# See: https://circleci.com/docs/configuration-reference/#workflows
+      # - store_test_results:
+      #     path: test-results
+  
+
 workflows:
-  say-hello-workflow:
+  build-and-deploy:
     jobs:
-      - say-hello
+      - unit-tests-and-linter
