--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,6 +37,8 @@ jobs:
 
   build-push-docker:
     # executor: my-machine
+    docker:
+      - image: cimg/python:3.11.5
     steps:
       - checkout
       - run:
