--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,7 +45,7 @@ jobs:
           name: Build Docker image
           command: docker build -t $DOCKER_USER/oc_lettings:$CIRCLE_SHA1 .
       - run:
-          name: Push Docker Image
+          name: Push Docker image
           command: |
             docker login -u $DOCKER_USER -p $DOCKER_PASS
             docker tag $DOCKER_USER/oc_lettings:$CIRCLE_SHA1 $DOCKER_USER/oc_lettings:lastest
