Add setup_remote_docker step

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,6 +41,7 @@ jobs:
       - image: cimg/python:3.11.5
     steps:
       - checkout
+      - setup_remote_docker
       - run:
           name: Build Docker image
           command: docker build -t $DOCKER_USER/oc_lettings:$CIRCLE_SHA1 .
