--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,7 +51,7 @@ jobs:
             docker login -u $DOCKER_USER -p $DOCKER_PASS
             docker tag $DOCKER_USER/oc_lettings:$CIRCLE_SHA1 $DOCKER_USER/oc_lettings:lastest
             docker push $DOCKER_USER/oc_lettings:$CIRCLE_SHA1
-            docker push $DOCKER_USER/oc_lettings:lastest
+            docker push $DOCKER_USER/oc_lettings:latest
 
 workflows:
   build-and-deploy:
