Change flake8 syntax again

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,8 +23,7 @@ jobs:
       - run:
           name: Linter
           command: |
-            flake8 > lint_results.txt
-            cat lint_results.txt
+            flake8 ./
       - run:
           name: Run Tests
           command: pytest --cov=.
