Add a linting error to a file to see if the flake8 result is ouput

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,8 +22,7 @@ jobs:
           pkg-manager: pip
       - run:
           name: Linter
-          command: |
-            flake8 ./
+          command: flake8
       - run:
           name: Run Tests
           command: pytest --cov=.
